--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ocupado",
   "version": "0.0.0",
+  "repository": "https://github.com/OcupadoApp/Ocupado",
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.0",
