--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "backbone-relational": "~0.8.6",
     "raphael": "~2.1.2",
     "fastclick": "~0.6.10",
-    "Sortable": "git@github.com:richgilbank/Sortable.git"
+    "backbone.marionette": "~1.8.6"
   },
   "devDependencies": {}
 }
