--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "backbone-relational": "~0.8.6",
     "raphael": "~2.1.2",
     "fastclick": "~0.6.10",
-    "backbone.marionette": "~1.8.6"
+    "backbone.marionette": "~1.8.6",
+    "socket.io-client": "~1.1.0"
   },
   "devDependencies": {}
 }
